--- a/FlashProgrammer.ipynb
+++ b/FlashProgrammer.ipynb
@@ -36,23 +36,24 @@
      "text": [
       "1 2\n",
       "IN: my_python_function: call javascript\n",
-      "1 1\n",
-      "IN: my_python_function: call javascript\n",
-      "2 2\n",
-      "1 2\n",
-      "IN: my_python_function: call javascript\n",
-      "2 2\n",
-      "2 5\n",
-      "IN: my_python_function: call javascript\n",
-      "1 1\n"
+      "2 2\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "KeyboardInterrupt\n",
-      "2019-05-26T23:02:56Z\n"
+      "/home/a1kerr/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -64,7 +65,8 @@
     "def my_python_function(a, b):\n",
     "    if a == b:\n",
     "        print('IN: my_python_function: call javascript')\n",
-    "        eel.my_javascript_function(a, b)  # This calls the Javascript function\n",
+    "        eel.my_javascript_function(a, b)  # This calls the Javascript function;\n",
+    "        eel.my_vue_function()\n",
     "    print(a, b)\n",
     "\n",
     "\n",
