--- a/FlashProgrammer.ipynb
+++ b/FlashProgrammer.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install eel"
+    "#!sudo pip3 install eel\n",
+    "# !pip install eel"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,25 +36,9 @@
      "output_type": "stream",
      "text": [
       "1 2\n",
+      "1 2\n",
       "IN: my_python_function: call javascript\n",
       "2 2\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/a1kerr/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -67,6 +52,7 @@
     "        print('IN: my_python_function: call javascript')\n",
     "        eel.my_javascript_function(a, b)  # This calls the Javascript function;\n",
     "        eel.my_vue_function()\n",
+    "        eel.app_1X('getResultMethod', 'From Eel all good')\n",
     "    print(a, b)\n",
     "\n",
     "\n",
@@ -296,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
