--- a/FlashProgrammer.ipynb
+++ b/FlashProgrammer.ipynb
@@ -28,17 +28,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0 1\n",
       "1 2\n",
-      "1 2\n",
+      "2 3\n",
+      "3 4\n",
+      "4 5\n",
+      "5 6\n",
+      "6 7\n",
       "IN: my_python_function: call javascript\n",
-      "2 2\n"
+      "7 8\n",
+      "8 9\n",
+      "9 10\n",
+      "10 11\n",
+      "9 10\n",
+      "8 9\n",
+      "IN: my_python_function: call javascript\n",
+      "7 8\n",
+      "6 7\n",
+      "5 6\n",
+      "4 5\n",
+      "3 4\n",
+      "4 5\n",
+      "5 6\n",
+      "6 7\n",
+      "IN: my_python_function: call javascript\n",
+      "7 8\n",
+      "6 7\n",
+      "5 6\n",
+      "4 5\n",
+      "3 4\n",
+      "2 3\n",
+      "1 2\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/a1kerr/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:2969: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -48,11 +92,12 @@
     "\n",
     "@eel.expose\n",
     "def my_python_function(a, b):\n",
-    "    if a == b:\n",
+    "    if a == 7:\n",
     "        print('IN: my_python_function: call javascript')\n",
     "        eel.my_javascript_function(a, b)  # This calls the Javascript function;\n",
-    "        eel.my_vue_function()\n",
     "        eel.app_1X('getResultMethod', 'From Eel all good')\n",
+    "    else:\n",
+    "        eel.app_1X('getResultMethod', a)\n",
     "    print(a, b)\n",
     "\n",
     "\n",
@@ -282,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
