--- a/FlashProgrammer.ipynb
+++ b/FlashProgrammer.ipynb
@@ -28,23 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expose_to_js loaded\n",
-      "0 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "KeyboardInterrupt\n",
-      "2019-05-30T01:03:10Z\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (expose_to_js.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/a1kerr/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2961\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-8fc87d435ac3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import my_modules.expose_to_js\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/a1kerr/Sandbox/ESP_Shell/my_modules/expose_to_js.py\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    def caser_default:\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -75,18 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n",
-      "test2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test functions\n",
     "from my_modules.expose_to_js import (test, test2)\n",
@@ -104,38 +90,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/usr/bin/esptool\n",
-      " Type: <class 'str'>\n",
-      "/usr/bin/esptool\n",
-      " Type: <class 'str'>\n",
-      "Esptool installed = True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Bootloader Test\n",
-    "import subprocess\n",
     "\n",
+    "# import my_modules.expose_to_js\n",
+    "from my_modules.boot_loader_runner import * \n",
     "esptool_location = '/usr/bin/esptool\\n'\n",
     "\n",
-    "def esptoolCheck():\n",
-    "    out_std = subprocess.check_output(['which', 'esptool'])\n",
-    "#     out_std = subprocess.Popen(['which', 'esptool'], stdout=PIPE)\n",
-    "    return out_std.decode('utf-8')\n",
-    "\n",
-    "esptoolCheck_out = esptoolCheck()\n",
     "\n",
     "\n",
-    "print(f'{esptoolCheck_out} Type: {type(esptoolCheck_out)}')\n",
-    "print(f'{esptool_location} Type: {type(esptool_location)}')\n",
-    "print(f'Esptool installed = {esptool_location == esptoolCheck_out}')"
+    "print(get_is_installed('esptool'))\n",
+    "print(get_is_installed('jupyterx'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test\n",
+    "from my_modules.expose_to_js import *\n",
+    "\n",
+    "switcher = {\n",
+    "#     'hello': test,\n",
+    "    2: test2\n",
+    "}\n",
+    "\n",
+    "func = switcher.get(2, lambda: 'No Dice')\n",
+    "# func = switcher[2]\n",
+    "func()\n",
+    "print(func())"
    ]
   }
  ],
