implament switch case

--- a/FlashProgrammer.ipynb
+++ b/FlashProgrammer.ipynb
@@ -28,18 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (expose_to_js.py, line 17)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/home/a1kerr/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2961\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-8fc87d435ac3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import my_modules.expose_to_js\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/home/a1kerr/Sandbox/ESP_Shell/my_modules/expose_to_js.py\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    def caser_default:\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expose_to_js loaded\n",
+      "No Dice!\n",
+      "No Dice!\n",
+      "No Dice!\n",
+      "No Dice!\n",
+      "No Dice!\n",
+      "No Dice!\n",
+      "No Dice!\n",
+      "test2\n",
+      "No Dice!\n"
      ]
     }
    ],
@@ -143,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
